Initial copy from template

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ name: CI
 
 defaults:
   run:
-    working-directory: 'iancleary.template'
+    working-directory: 'iancleary.git-repos'
 
 jobs:
 
