--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,16 +2,12 @@
 - name: Converge
   hosts: all
 
-  pre_tasks:
-    - name: Update apt cache. (Deb)
-      ansible.builtin.apt: update_cache=yes cache_valid_time=600
-      when: ansible_os_family == 'Debian'
-      changed_when: false
-
-    - name: Set defaults for testing only
-      ansible.builtin.set_fact:
-        variables: if_needed_only
-
   roles:
-    - role: iancleary.template
-      variable: add_them_here
+    - role: iancleary.git-repos
+      variable:
+        git_clone_repos:
+          - dest: "~/Automation/Ansible"
+            server: "git@github.com"
+            user: "iancleary"
+            update: "yes"
+            repos: []
