--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ name: Release
 
 defaults:
   run:
-    working-directory: 'iancleary.template'
+    working-directory: 'iancleary.git-repos'
 
 jobs:
 
@@ -24,7 +24,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'iancleary.template'
+          path: 'iancleary.git-repos'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
