--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'iancleary.template'
+          path: 'iancleary.git-repos'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
@@ -41,14 +41,16 @@ jobs:
     strategy:
       matrix:
         distro:
-          - ubuntu2204
+          - rockylinux8
+          - centos7
           - ubuntu2004
+          - debian11
 
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'iancleary.template'
+          path: 'iancleary.git-repos'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
