--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,11 +1,11 @@
 galaxy_info:
-  role_name: template
+  role_name: git-repos
   author: iancleary
   description: Ansible role to install blank
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
-  issue_tracker_url: http://github.com/iancleary/ansible-role-template/issues
+  issue_tracker_url: http://github.com/iancleary/ansible-role-git-repos/issues
 
   license: MIT
 
