--- a/meta/main.yml
+++ b/meta/main.yml
@@ -54,11 +54,14 @@ galaxy_info:
   galaxy_tags:
     - system
     - user
-    - security
     - ssh
-    - accounts
-    - pubkey
+    - git
+    - clone
+    - repository
     - github
+    - gitlab
+    - bitbucket
+    - gitea
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
