--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install test dependencies.
-        run: pip3 install ansible yamllint ansible-lint
+        run: pip3 install -r requirements-lint-frozen.txt
 
       - name: Lint code.
         run: |
@@ -57,8 +57,12 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Upgrade pip
+        run: pip3 install --upgrade pip
+
       - name: Install test dependencies.
-        run: pip3 install ansible molecule[docker] docker
+        #run: pip3 install ansible molecule molecule-plugins[docker] docker
+        run: pip3 install -r requirements-test-frozen.txt
 
       - name: Run Molecule tests.
         run: molecule test
